--- a/Codeskill/LearningEnglish/计算机科学导论.md
+++ b/Codeskill/LearningEnglish/计算机科学导论.md
@@ -1,1 +1,29 @@
-iii
+# 计算机科学导论
+
+## 一. 数据的表示和运算
+### 2.数字系统
+#### 十进制（以10为底 decimal）
+#### 二进制系统(binary)
+#### 十六进制(hexadecimal)
+#### 八进制（octal）
+### 3.数据存储
+
+### 4.数据运算
+## 二. 计算机硬件
+### 5.计算机组成
+### 6.计算机网络和因特网
+## 三. 计算机软件
+### 7.操作系统
+### 8.算法
+### 9. 程序设计语言
+### 10.软件工程
+## 四. 数据组织与抽象
+### 11.数据结构
+### 12.抽象数据类型
+### 13.文件结构
+### 14.数据库
+## 五. 高级话题
+### 15. 数据压缩
+### 16. 安全
+### 17.计算理论
+### 18.人工智能
